Updated 'assets/css/components/lists.css' via CloudCannon

--- a/assets/css/components/lists.css
+++ b/assets/css/components/lists.css
@@ -41,7 +41,7 @@ ul.guide-summary li {
 ul.guide-summary .label {
   text-transform:uppercase;
   font-weight:400;
-  font-style:none;
+  font-style:normal;
 }
 
 
