--- a/assets/css/components/lists.css
+++ b/assets/css/components/lists.css
@@ -42,6 +42,8 @@ ul.guide-summary .label {
   text-transform:uppercase;
   font-weight:400;
   font-style:normal;
+  display:inline-block;
+  margin-left:2px;
 }
 
 
