--- a/assets/css/components/lists.css
+++ b/assets/css/components/lists.css
@@ -42,8 +42,9 @@ ul.guide-summary .label {
   text-transform:uppercase;
   font-weight:400;
   font-style:normal;
-  display:inline-block;
-  margin-left:2px;
+}
+ul.guide-summary li i.fa {
+  width:10px;
 }
 
 
