--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
         
 		<link rel="apple-touch-icon" href="{{ site.baseurl }}/assets/images/apple-touch-icon.png">
 		<link rel="icon" type="image/png" href="{{ site.baseurl }}/assets/images/touch-icon.png" sizes="192x192">
-		<link rel="icon" type="image/png" href="{{ site.baseurl }}/assets/images/favicon.png">
+		<link rel="icon" type="image/png" href="{{ site.baseurl }}/assets/images/favicon-32x32.png">
 		{% seo %}
 		{% feed_meta %}
 
