Updated 'assets/css/base/typography.css' via CloudCannon

--- a/assets/css/base/typography.css
+++ b/assets/css/base/typography.css
@@ -96,8 +96,9 @@ blockquote p:last-child {
 hr {
   border: 0;
   height: 0;
-  border-top: 1px solid rgba(0, 0, 0, 0.1);
+  border-top: 1px solid rgba(0, 0, 0, 0.2);
   border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+  margin:25px 0;
 }
 hr.thin {
   margin: 10px auto;
