--- a/_layouts/guide.html
+++ b/_layouts/guide.html
@@ -15,8 +15,9 @@ layout: default
         <li><i class="fa fa-clock-o fa-fw" aria-hidden="true"></i><span class="label">Time required:</span> {{ page.time_required }}</li>
       {% endif %}
       {% if page.file_attachment_path %}
-        <li><i class="fa fa-file fa-fw" aria-hidden="true"></i><span class="label"><a target="_blank" href="{{ page.file_attachment_path }}">Download files</a></span></li>
-      {% endif %}      
+      {% assign fileurl = page.file_attachment_path | split: "/" %}
+        <li><i class="fa fa-file fa-fw" aria-hidden="true"></i><span class="label">Download: </span><a target="_blank" href="{{ page.file_attachment_path }}">{{ fileurl.last }}</a></span></li>
+      {% endif %}        
     </ul>
   </div>
 </div>
@@ -29,7 +30,8 @@ layout: default
     <li><i class="fa fa-clock-o fa-fw" aria-hidden="true"></i> <span class="label">Time required:</span>{{ page.time_required }}</li>
   {% endif %}
   {% if page.file_attachment_path %}
-    <li><i class="fa fa-file fa-fw" aria-hidden="true"></i><span class="label"><a target="_blank" href="{{ page.file_attachment_path }}">Download files</a></span></li>
+  {% assign fileurl = page.file_attachment_path | split: "/" %}
+    <li><i class="fa fa-file fa-fw" aria-hidden="true"></i><span class="label">Download: </span><a target="_blank" href="{{ page.file_attachment_path }}">{{ fileurl.last }}</a></span></li>
   {% endif %}    
 </ul>
 {% endif %}
