--- a/_layouts/guide.html
+++ b/_layouts/guide.html
@@ -16,7 +16,7 @@ layout: default
       {% endif %}
       {% if page.file_attachment_path %}
       {% assign fileurl = page.file_attachment_path | split: "/" %}
-        <li><i class="fa fa-file fa-fw" aria-hidden="true"></i><span class="label">Download: </span><a target="_blank" href="{{ page.file_attachment_path }}">{{ fileurl.last }}</a></span></li>
+        <li><i class="fa fa-download fa-fw" aria-hidden="true"></i><span class="label">Download: </span><a target="_blank" href="{{ page.file_attachment_path }}">{{ fileurl.last }}</a></span></li>
       {% endif %}        
     </ul>
   </div>
@@ -31,7 +31,7 @@ layout: default
   {% endif %}
   {% if page.file_attachment_path %}
   {% assign fileurl = page.file_attachment_path | split: "/" %}
-    <li><i class="fa fa-file fa-fw" aria-hidden="true"></i><span class="label">Download: </span><a target="_blank" href="{{ page.file_attachment_path }}">{{ fileurl.last }}</a></span></li>
+    <li><i class="fa fa-download fa-fw" aria-hidden="true"></i><span class="label">Download: </span><a target="_blank" href="{{ page.file_attachment_path }}">{{ fileurl.last }}</a></span></li>
   {% endif %}    
 </ul>
 {% endif %}
