--- a/_layouts/guide.html
+++ b/_layouts/guide.html
@@ -9,7 +9,7 @@ layout: default
   <div class="col-sm-6">
     <ul class="guide-summary">
       {% if page.difficulty %}
-        <li><i class="fa fa-bolt fa-fw" aria-hidden="true"></i><span class="label">Difficulty:</span> {{ page.difficulty }}</li>
+        <li><i class="fa fa-cogs fa-fw" aria-hidden="true"></i><span class="label">Difficulty:</span> {{ page.difficulty }}</li>
       {% endif %}
       {% if page.difficulty %}
         <li><i class="fa fa-clock-o fa-fw" aria-hidden="true"></i><span class="label">Time required:</span> {{ page.time_required }}</li>
@@ -24,7 +24,7 @@ layout: default
 {% elsif page.difficulty or page.time_required %}
 <ul class="guide-summary">
   {% if page.difficulty %}
-    <li><i class="fa fa-bolt fa-fw" aria-hidden="true"></i><span class="label">Difficulty:</span> {{ page.difficulty }}</li>
+    <li><i class="fa fa-cogs fa-fw" aria-hidden="true"></i><span class="label">Difficulty:</span> {{ page.difficulty }}</li>
   {% endif %}
   {% if page.time_required %}
     <li><i class="fa fa-clock-o fa-fw" aria-hidden="true"></i> <span class="label">Time required:</span>{{ page.time_required }}</li>
