Updated '_layouts/guide.html' via CloudCannon

--- a/_layouts/guide.html
+++ b/_layouts/guide.html
@@ -9,14 +9,14 @@ layout: default
   <div class="col-sm-6">
     <ul class="guide-summary">
       {% if page.difficulty %}
-        <li><i class="fa fa-cogs fa-fw" aria-hidden="true"></i><span class="label">Difficulty:</span> {{ page.difficulty }}</li>
+        <li class="difficulty {{ page.difficulty }}"><i class="fa fa-cogs fa-fw" aria-hidden="true"></i><span class="label">Difficulty:</span> {{ page.difficulty }}</li>
       {% endif %}
-      {% if page.difficulty %}
-        <li><i class="fa fa-clock-o fa-fw" aria-hidden="true"></i><span class="label">Time required:</span> {{ page.time_required }}</li>
+      {% if page.time_required %}
+        <li class="time-required"><i class="fa fa-clock-o fa-fw" aria-hidden="true"></i><span class="label">Time required:</span> {{ page.time_required }}</li>
       {% endif %}
       {% if page.file_attachment_path %}
       {% assign fileurl = page.file_attachment_path | split: "/" %}
-        <li><i class="fa fa-download fa-fw" aria-hidden="true"></i><span class="label">Download: </span><a target="_blank" href="{{ page.file_attachment_path }}">{{ fileurl.last }}</a></span></li>
+        <li class="attachment"><i class="fa fa-download fa-fw" aria-hidden="true"></i><span class="label">Download: </span><a target="_blank" href="{{ page.file_attachment_path }}">{{ fileurl.last }}</a></span></li>
       {% endif %}        
     </ul>
   </div>
@@ -24,17 +24,18 @@ layout: default
 {% elsif page.difficulty or page.time_required %}
 <ul class="guide-summary">
   {% if page.difficulty %}
-    <li><i class="fa fa-cogs fa-fw" aria-hidden="true"></i><span class="label">Difficulty:</span> {{ page.difficulty }}</li>
+    <li class="difficulty {{ page.difficulty }}"><i class="fa fa-cogs fa-fw" aria-hidden="true"></i><span class="label">Difficulty:</span> {{ page.difficulty }}</li>
   {% endif %}
   {% if page.time_required %}
-    <li><i class="fa fa-clock-o fa-fw" aria-hidden="true"></i> <span class="label">Time required:</span>{{ page.time_required }}</li>
+    <li class="time-required"><i class="fa fa-clock-o fa-fw" aria-hidden="true"></i> <span class="label">Time required:</span>{{ page.time_required }}</li>
   {% endif %}
   {% if page.file_attachment_path %}
   {% assign fileurl = page.file_attachment_path | split: "/" %}
-    <li><i class="fa fa-download fa-fw" aria-hidden="true"></i><span class="label">Download: </span><a target="_blank" href="{{ page.file_attachment_path }}">{{ fileurl.last }}</a></span></li>
+    <li class="attachment"><i class="fa fa-download fa-fw" aria-hidden="true"></i><span class="label">Download: </span><a target="_blank" href="{{ page.file_attachment_path }}">{{ fileurl.last }}</a></span></li>
   {% endif %}    
 </ul>
 {% endif %}
+
 
 
 {{ content }}
