--- a/assets/css/theme/theme.css
+++ b/assets/css/theme/theme.css
@@ -143,3 +143,27 @@ ul.footer-links li {
   margin-bottom:25px;
 }
 
+ul.guide-summary {
+  list-style:none;
+  margin:0;
+  padding:0;
+}
+ul.guide-summary li {
+  display:block;
+  padding:10px;
+  margin-bottom:10px;
+  border:solid 1px #ddd;
+  border-radius:5px;
+  font-style:italic;
+}
+
+ul.guide-summary .label {
+  text-transform:uppercase;
+  font-weight:400;
+  font-style:normal;
+}
+
+
+
+
+
