--- a/assets/css/theme/theme.css
+++ b/assets/css/theme/theme.css
@@ -161,7 +161,7 @@ ul.guide-summary .label {
   text-transform:uppercase;
   font-weight:400;
   font-style:normal;
-  padding-left:2em;
+  padding-left:.75rem;
 }
 
 /**
