--- a/assets/css/theme/theme.css
+++ b/assets/css/theme/theme.css
@@ -155,6 +155,8 @@ ul.guide-summary li {
   border:solid 1px #ddd;
   border-radius:5px;
   font-style:italic;
+  text-transform:uppercase;
+  font-size:1.0rem;
 }
 
 ul.guide-summary .label {
@@ -162,6 +164,8 @@ ul.guide-summary .label {
   font-weight:400;
   font-style:normal;
   padding-left:.75rem;
+  width:150px;
+  font-size:1.0rem;
 }
 
 /**
