--- a/_layouts/guide.html
+++ b/_layouts/guide.html
@@ -24,7 +24,7 @@ layout: default
 {% elsif page.difficulty or page.time_required %}
 <ul class="guide-summary">
   {% if page.difficulty %}
-    <li class="difficulty {{ page.difficulty }}"><i class="fa fa-cogs fa-fw" aria-hidden="true"></i> <span class="label">Difficulty:</span> <span class="{{ page.difficulty }}">{{ page.difficulty }}</span></li>
+    <li class="difficulty"><i class="fa fa-cogs fa-fw" aria-hidden="true"></i> <span class="label">Difficulty:</span> <span class="{{ page.difficulty }}">{{ page.difficulty }}</span></li>
   {% endif %}
   {% if page.time_required %}
     <li class="time-required"><i class="fa fa-clock-o fa-fw" aria-hidden="true"></i> <span class="label">Time required:</span> {{ page.time_required }}</li>
