Updated '_layouts/guide.html' via CloudCannon

--- a/_layouts/guide.html
+++ b/_layouts/guide.html
@@ -9,7 +9,7 @@ layout: default
   <div class="col-sm-6">
     <ul class="guide-summary">
       {% if page.difficulty %}
-        <li class="difficulty"><i class="fa fa-cogs fa-fw" aria-hidden="true"></i> <span class="label">Difficulty:</span> <span class="detail {{ page.difficulty }}">{{ page.difficulty }}</span></li>
+        <li class="difficulty"><i class="fa fa-cogs fa-fw" aria-hidden="true"></i> <span class="label">Difficulty:</span> <span class="detail {{ page.difficulty | downcase }}">{{ page.difficulty }}</span></li>
       {% endif %}
       {% if page.time_required %}
         <li class="time-required"><i class="fa fa-clock-o fa-fw" aria-hidden="true"></i> <span class="label">Time required:</span> <span class="detail">{{ page.time_required }}</span></li>
@@ -24,7 +24,7 @@ layout: default
 {% elsif page.difficulty or page.time_required %}
 <ul class="guide-summary">
   {% if page.difficulty %}
-    <li class="difficulty"><i class="fa fa-cogs fa-fw" aria-hidden="true"></i> <span class="label">Difficulty:</span> <span class="detail {{ page.difficulty }}">{{ page.difficulty }}</span></li>
+    <li class="difficulty"><i class="fa fa-cogs fa-fw" aria-hidden="true"></i> <span class="label">Difficulty:</span> <span class="detail {{ page.difficulty | downcase }}">{{ page.difficulty }}</span></li>
   {% endif %}
   {% if page.time_required %}
     <li class="time-required"><i class="fa fa-clock-o fa-fw" aria-hidden="true"></i> <span class="label">Time required:</span> <span class="detail">{{ page.time_required }}</span></li>
