--- a/assets/css/theme/theme.css
+++ b/assets/css/theme/theme.css
@@ -169,6 +169,7 @@ ul.guide-summary .detail {
   text-align:right;
   display:block;
   float:right;
+  font-weight:bold;
 }
 /**
  * https://www.materialui.co/colors
