--- a/assets/css/theme/theme.css
+++ b/assets/css/theme/theme.css
@@ -167,6 +167,7 @@ ul.guide-summary .detail {
   text-align:right;
   display:block;
   float:right;
+  font-style:italic;
 }
 /**
  * https://www.materialui.co/colors
