Updated 'assets/css/theme/theme.css' via CloudCannon

--- a/assets/css/theme/theme.css
+++ b/assets/css/theme/theme.css
@@ -147,6 +147,7 @@ ul.guide-summary {
   list-style:none;
   margin:0;
   padding:0;
+  max-width:400px;
 }
 ul.guide-summary li {
   display:block;
