--- a/assets/css/base/print.css
+++ b/assets/css/base/print.css
@@ -4,10 +4,10 @@
     color: #000 !important; /* Black prints faster: h5bp.com/s */
     box-shadow: none !important;
     text-shadow: none !important;
-    font-size:1.2rem;
   }
   body {
     padding-top: 0;
+    font-size:1.4px;
   }
   a, a:visited {
     text-decoration: underline;
@@ -65,13 +65,10 @@
     height:auto;
   }
   h1 {
-    font-size: 3rem;
-  }
-  h2 {
-    font-size: 2rem;  
+    font-size: 16px;
   }
   h2, h3, h4 {
-  font-size: 1.4rem;
-  margin-top: 25px;
+  font-size: 14px;
+  text-transform:uppercase;
   }  
 }
