--- a/assets/css/base/print.css
+++ b/assets/css/base/print.css
@@ -7,7 +7,6 @@
   }
   body {
     padding-top: 0;
-    font-size:1.4px !important;
   }
   a, a:visited {
     text-decoration: underline;
@@ -65,12 +64,15 @@
     height:auto;
   }
   h1 {
-    font-size: 18px !important;
+    font-size: 2.4rem !important;
     font-weight:bold;
   }
-  h2, h3, h4 {
-  font-size: 16px !important;
-  font-weight:bold;
+  h2 {
+    font-size:2.0rem !important;
+  }
+  
+  h3, h4 {
+  font-size: 1.8rem !important;
   text-transform:uppercase;
   }  
 }
