--- a/assets/css/base/print.css
+++ b/assets/css/base/print.css
@@ -65,10 +65,10 @@
     width:150px !important;
     height:auto;
   }
-  h1 { font-size: 3.0rem; line-height: 1.25; letter-spacing: -.1rem; }
-  h2 { font-size: 2.8rem; line-height: 1.3;  letter-spacing: -.1rem; }
-  h3 { font-size: 2.4rem; line-height: 1.35; letter-spacing: -.08rem; }
-  h4 { font-size: 1.8rem; line-height: 1.5;  letter-spacing: -.05rem; }
-  h5 { font-size: 1.5rem; line-height: 1.6;  letter-spacing: 0; }
-  h6 { font-size: 1.4rem; line-height: 1.6;  letter-spacing: 0; }
+  h1 { font-size: 3.0rem !important; }
+  h2 { font-size: 2.8rem !important; }
+  h3 { font-size: 2.4rem !important; }
+  h4 { font-size: 1.8rem !important; }
+  h5 { font-size: 1.5rem !important; }
+  h6 { font-size: 1.4rem !important; }
 }
