Updated 'assets/css/base/print.css' via CloudCannon

--- a/assets/css/base/print.css
+++ b/assets/css/base/print.css
@@ -7,8 +7,8 @@
   }
   body {
     padding-top: 0;
-    font-size:1.4em;
-    font-family: arial, verdana;
+    font-size:1.4em !important;
+    font-family: arial, verdana !important;
   }
   a, a:visited {
     text-decoration: underline;
