--- a/assets/css/base/print.css
+++ b/assets/css/base/print.css
@@ -66,10 +66,10 @@
     width:100px !important;
     height:auto;
   }
-  h1 { font-size: 2.0rem !important; font-weight:bold !important; }
+  h1 { font-size: 2.2rem !important; font-weight:bold !important; }
   h2 { font-size: 1.8rem !important; font-weight:bold !important; }
-  h3 { font-size: 1.6rem !important; text-transform:uppercase;}
-  h4 { font-size: 1.5rem !important; text-transform:uppercase;}
+  h3 { font-size: 1.6rem !important; }
+  h4 { font-size: 1.5rem !important; }
   h5 { font-size: 1.4rem !important; }
   h6 { font-size: 1.4rem !important; }
 }
