--- a/assets/css/base/print.css
+++ b/assets/css/base/print.css
@@ -64,12 +64,11 @@
   .logo {
     width:100px !important;
     height:auto;
-    float:left;
   }
   p {
    margin: 0 auto 1em auto !important;  
   }
-  h1 { font-size: 2.2rem !important; font-weight:bold !important; border-bottom:solid 3px #000; }
+  h1 { font-size: 2.2rem !important; font-weight:bold !important; }
   h2 { font-size: 1.8rem !important; font-weight:bold !important; }
   h3 { font-size: 1.6rem !important; }
   h4 { font-size: 1.4rem !important; }
