--- a/assets/css/base/print.css
+++ b/assets/css/base/print.css
@@ -66,7 +66,7 @@
     height:auto;
   }
   .logo img {
-    padding:5px;
+    padding:5px !important;
   }
   p {
    margin: 0 auto 1em auto !important;  
