--- a/assets/css/base/print.css
+++ b/assets/css/base/print.css
@@ -87,5 +87,6 @@
     margin:0 !important;
     font-size: 2.6rem !important;
     font-weight:normal !important;
+    line-height:2.4 !important;
   }  
 }
