Updated '_layouts/default.html' via CloudCannon

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -51,7 +51,7 @@
       {% assign header_image = page.header_image %}
     {% endif %} 
     <header id="header" style="background-image:url({{ header_image }})">       
-      <div class="mobile-menu-icons visible-xs">
+      <div class="mobile-menu-icons visible-xs print-hidden">
         <a class="mobile-search-toggle no-user-select"><i class="fa fa-search"><span class="element-invisible">Search</span></i></a> 
         <a class="mobile-menu-toggle no-user-select"><i class="fa fa-bars"><span class="element-invisible">Menu</span></i></a> 
       </div>
