Updated 'assets/css/base/print.css' via CloudCannon

--- a/assets/css/base/print.css
+++ b/assets/css/base/print.css
@@ -5,8 +5,7 @@
     box-shadow: none !important;
     text-shadow: none !important;
   }
-  @page  
-  { 
+  @page { 
       size: auto;   /* auto is the initial value */ 
   
       /* this affects the margin in the printer settings */ 
