Updated '_layouts/guide.html' via CloudCannon

--- a/_layouts/guide.html
+++ b/_layouts/guide.html
@@ -49,3 +49,9 @@ Tags: <span>
   {% endfor %}
 </span>
 {% endif %}
+
+
+
+<a onclick="window.print();return false;"><i class="fa fa-print"></i></a>
+
+
