Updated 'assets/css/theme/theme.css' via CloudCannon

--- a/assets/css/theme/theme.css
+++ b/assets/css/theme/theme.css
@@ -182,9 +182,9 @@ ul.guide-summary .detail {
 }
 
 
-.print-icon {
-  float-right:
-  text-decoration:none;
+#content a.print-icon {
+  float:right:
+  border-bottom:none;
   color: #000;
 }
 
