--- a/assets/css/theme/theme.css
+++ b/assets/css/theme/theme.css
@@ -184,7 +184,7 @@ ul.guide-summary .detail {
 
 #content a.print-icon {
   display:block;
-  float:right:
+  float:right;
   border-bottom:none;
   color: #000;
 }
