--- a/_layouts/guide.html
+++ b/_layouts/guide.html
@@ -52,6 +52,6 @@ Tags: <span>
 
 
 
-<a class="print-icon" href="#" onclick="window.print();return false;"><i class="fa fa-print"></i></a>
+<a class="print-icon" href="#" onclick="window.print();return false;"><i class="fa fa-print"></i> Print</a>
 
 
