Updated 'assets/css/base/print.css' via CloudCannon

--- a/assets/css/base/print.css
+++ b/assets/css/base/print.css
@@ -50,9 +50,11 @@
     border-width: 1px;
     border-left-color: #999;
   }
+  #content .print-only,
   .print-only {
     display: block;
   }
+  #content .print-hidden,
   .print-hidden {
     display:none;  
   }
