--- a/assets/css/base/print.css
+++ b/assets/css/base/print.css
@@ -50,13 +50,11 @@
     border-width: 1px;
     border-left-color: #999;
   }
-  #content .print-only,
   .print-only {
-    display: block;
+    display: block !important;
   }
-  #content .print-hidden,
   .print-hidden {
-    display:none;  
+    display:none !important;  
   }
   p {
    margin: 0 auto 1em auto !important;  
