Updated '_layouts/guide.html' via CloudCannon

--- a/_layouts/guide.html
+++ b/_layouts/guide.html
@@ -42,10 +42,10 @@ layout: default
 
 
 {% if page.tags.size > 0 %}
-Tags: <span>
+<span class="tags">
   {% for tag in page.tags %}
     {% capture tag_name %}{{ tag }}{% endcapture %}
-    <a href="/tags#{{ tag_name }}">{{ tag_name }}</a> 
+    <a class="tag-name" href="/tags#{{ tag_name }}">{{ tag_name }}</a> 
   {% endfor %}
 </span>
 {% endif %}
