--- a/assets/css/theme/theme.css
+++ b/assets/css/theme/theme.css
@@ -189,5 +189,15 @@ ul.guide-summary .detail {
   color: #000;
 }
 
+#content .tags .tag-name,
+.tags .tag-name {
+  border:solid 1px #ccc;
+  padding:5px;
+  background-color:#fefefe;
+  border-radius:5px;
+  text-transform:uppercase;
+  font-size:1.2rem;
+}
+
 
 
