--- a/assets/css/theme/theme.css
+++ b/assets/css/theme/theme.css
@@ -193,10 +193,11 @@ ul.guide-summary .detail {
 .tags .tag-name {
   border:solid 1px #ccc;
   padding:5px;
-  background-color:#fefefe;
+  background-color:#f6f6f6;
   border-radius:5px;
   text-transform:uppercase;
   font-size:1.2rem;
+  color:#000;
 }
 
 
