--- a/assets/css/theme/theme.css
+++ b/assets/css/theme/theme.css
@@ -193,11 +193,15 @@ ul.guide-summary .detail {
 .tags .tag-name {
   border:solid 1px #ccc;
   padding:5px;
-  background-color:#f6f6f6;
+  background-color:#ffffff;
   border-radius:5px;
   text-transform:uppercase;
   font-size:1.2rem;
-  color:#000;
+  color:#222;
+}
+#content .tags .tag-name:hover,
+.tags .tag-name:hover {
+  background-color:#f6f6f6;
 }
 
 
