--- a/_layouts/slidedeck.html
+++ b/_layouts/slidedeck.html
@@ -8,7 +8,7 @@
 
 		<link rel="stylesheet" href="{{ site.baseurl }}/assets/js/revealjs/dist/reset.css">
 		<link rel="stylesheet" href="{{ site.baseurl }}/assets/js/revealjs/dist/reveal.css">
-		<link rel="stylesheet" href="{{ site.baseurl }}/assets/js/revealjs/dist/theme/black.css" id="theme">
+		<link rel="stylesheet" href="{{ site.baseurl }}/assets/js/revealjs/dist/theme/{{ page.slide_theme }}.css" id="theme">
 
 		<!-- Theme used for syntax highlighted code -->
 		<link rel="stylesheet" href="{{ site.baseurl }}/assets/js/revealjs/plugin/highlight/monokai.css" id="highlight-theme">
