--- a/_layouts/slidedeck.html
+++ b/_layouts/slidedeck.html
@@ -8,8 +8,11 @@
 
 		<link rel="stylesheet" href="{{ site.baseurl }}/assets/js/revealjs/dist/reset.css">
 		<link rel="stylesheet" href="{{ site.baseurl }}/assets/js/revealjs/dist/reveal.css">
-		<link rel="stylesheet" href="{{ site.baseurl }}/assets/js/revealjs/dist/theme/{{ page.slide_theme }}.css" id="theme">
-
+		{% if page.slide_theme %}
+		  <link rel="stylesheet" href="{{ site.baseurl }}/assets/js/revealjs/dist/theme/{{ page.slide_theme }}.css" id="theme">
+    {% else %}
+      <link rel="stylesheet" href="{{ site.baseurl }}/assets/js/revealjs/dist/theme/simple.css" id="theme">
+    {% endif %}
 		<!-- Theme used for syntax highlighted code -->
 		<link rel="stylesheet" href="{{ site.baseurl }}/assets/js/revealjs/plugin/highlight/monokai.css" id="highlight-theme">
 	</head>
