Updated 2 files via CloudCannon

--- a/_layouts/slidedeck.html
+++ b/_layouts/slidedeck.html
@@ -1,20 +1,20 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
 		<title>{{ page.title }}</title>
 
-		<link rel="stylesheet" href="{{ site.baseurl }}/assets/js/revealjs/dist/reset.css">
-		<link rel="stylesheet" href="{{ site.baseurl }}/assets/js/revealjs/dist/reveal.css">
+		<link rel="stylesheet" href="{{ site.baseurl }}/assets/js/revealjs/dist/reset.css" />
+		<link rel="stylesheet" href="{{ site.baseurl }}/assets/js/revealjs/dist/reveal.css" />
 		{% if page.slide_theme %}
-		  <link rel="stylesheet" href="{{ site.baseurl }}/assets/js/revealjs/dist/theme/{{ page.slide_theme }}.css" id="theme">
+		  <link rel="stylesheet" href="{{ site.baseurl }}/assets/js/revealjs/dist/theme/{{ page.slide_theme }}.css" id="theme" />
     {% else %}
-      <link rel="stylesheet" href="{{ site.baseurl }}/assets/js/revealjs/dist/theme/simple.css" id="theme">
+      <link rel="stylesheet" href="{{ site.baseurl }}/assets/js/revealjs/dist/theme/simple.css" id="theme" />
     {% endif %}
 		<!-- Theme used for syntax highlighted code -->
-		<link rel="stylesheet" href="{{ site.baseurl }}/assets/js/revealjs/plugin/highlight/monokai.css" id="highlight-theme">
+		<link rel="stylesheet" href="{{ site.baseurl }}/assets/js/revealjs/plugin/highlight/monokai.css" id="highlight-theme" />
 	</head>
 	<body>
 		<div class="reveal">
