--- a/_layouts/slidedeck.html
+++ b/_layouts/slidedeck.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
-		<title>{{ page.title }}</title>
+		<title>{{ page.title }} | CPL Maker Lab</title>
 
 		<link rel="stylesheet" href="{{ site.baseurl }}/assets/js/revealjs/dist/reset.css" />
 		<link rel="stylesheet" href="{{ site.baseurl }}/assets/js/revealjs/dist/reveal.css" />
@@ -26,8 +26,6 @@
 		</div>
 
 		<script src="{{ site.baseurl }}/assets/js/revealjs/dist/reveal.js"></script>
-		<script src="{{ site.baseurl }}/assets/js/revealjs/plugin/notes/notes.js"></script>
-		<script src="{{ site.baseurl }}/assets/js/revealjs/plugin/markdown/markdown.js"></script>
 		<script src="{{ site.baseurl }}/assets/js/revealjs/plugin/highlight/highlight.js"></script>
 		<script>
 			// More info about initialization & config:
@@ -35,10 +33,14 @@
 			// - https://revealjs.com/config/
 			Reveal.initialize({
 				hash: true,
-        toggleOverview: true,
+				slideNumber: 'c/t' 
 				// Learn about plugins: https://revealjs.com/plugins/
-				plugins: [ RevealMarkdown, RevealHighlight, RevealNotes ]
+				plugins: [ RevealHighlight ]
 			});
+      Reveal.initialize.then( () => {
+        // reveal.js is ready
+        Reveal.toggleOverview();
+      } )			
 		</script>
 	</body>
 </html>
