--- a/_layouts/slidedeck.html
+++ b/_layouts/slidedeck.html
@@ -20,7 +20,7 @@
 		<div class="reveal">
 			<div class="slides">
       {% for slide in page.slides %}
-        <section class="content editable">{{ slide.content_markdown | markdownify }}</section>
+        <section data-background-color="{{ slide.bg_color }}" class="content editable">{{ slide.content_markdown | markdownify }}</section>
       {% endfor %}
 			</div>
 		</div>
