Updated '_layouts/slidedeck.html' via CloudCannon

--- a/_layouts/slidedeck.html
+++ b/_layouts/slidedeck.html
@@ -39,7 +39,8 @@
 			});
       Reveal.initialize.then( () => {
         // reveal.js is ready
-        Reveal.toggleOverview();
+        console.log('fired');
+        Reveal.toggleOverview( true );
       } )			
 		</script>
 	</body>
