--- a/_layouts/slidedeck.html
+++ b/_layouts/slidedeck.html
@@ -36,12 +36,9 @@
 				slideNumber: 'c/t',
 				// Learn about plugins: https://revealjs.com/plugins/
 				plugins: [ RevealHighlight ]
-			});
-      Reveal.initialize.then( () => {
-        // reveal.js is ready
-        console.log('fired');
-        Reveal.toggleOverview( true );
-      } )			
+			}).then(){
+			  Reveal.toggleOverview( true );
+			};
 		</script>
 	</body>
 </html>
