Updated '_layouts/slidedeck.html' via CloudCannon

--- a/_layouts/slidedeck.html
+++ b/_layouts/slidedeck.html
@@ -37,7 +37,7 @@
 				// Learn about plugins: https://revealjs.com/plugins/
 				plugins: [ RevealHighlight ]
 			});
-      Reveal.initialize.then( () => {
+      Reveal.initialize.then(function() {
         // reveal.js is ready
         console.log('fired');
         Reveal.toggleOverview(true);
