Updated '_layouts/slidedeck.html' via CloudCannon

--- a/_layouts/slidedeck.html
+++ b/_layouts/slidedeck.html
@@ -38,8 +38,7 @@
 				plugins: [ RevealHighlight ]
 			}).then(
   			function(){
-          console.log('fired');
-          Reveal.toggleOverview(true);			 
+         // Reveal.toggleOverview(true);			 
   			}
 			);
 
