Updated '_layouts/slidedeck.html' via CloudCannon

--- a/_layouts/slidedeck.html
+++ b/_layouts/slidedeck.html
@@ -18,7 +18,7 @@
 	</head>
 	<body>
 	  <div class="slidedeck-branding">
-	     
+	    <div class="logo"><a href="{{ site.baseurl }}/"><img alt="logo" title="Logo" src="{{site.data.images.logo_image}}" /></a></div>
 	  </div>
 		<div class="reveal">
 			<div class="slides">
