Updated '_layouts/slidedeck.html' via CloudCannon

--- a/_layouts/slidedeck.html
+++ b/_layouts/slidedeck.html
@@ -15,6 +15,9 @@
     {% endif %}
 		<!-- Theme used for syntax highlighted code -->
 		<link rel="stylesheet" href="{{ site.baseurl }}/assets/js/revealjs/plugin/highlight/monokai.css" id="highlight-theme" />
+		
+		<link rel="stylesheet" href="{{ site.baseurl }}/assets/css/components/slidedeck.css" />
+
 	</head>
 	<body>
 	  <div class="slidedeck-branding">
