Updated '_layouts/default.html' via CloudCannon

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -77,7 +77,10 @@
 	
 
   <script type="text/javascript" src="{{site.base_url}}/assets/js/enquire.min.js"></script>
+  <script type="text/javascript" src="{{site.base_url}}/assets/js/list.min.js"></script>
+  <script type="text/javascript" src="{{site.base_url}}/assets/js/html2pdf.bundle.min.js"></script>
 	<script type="text/javascript" src="{{site.base_url}}/assets/js/main.js"></script>
+	
 
     <!-- Scripts -->
     {% if jekyll.environment == 'production' and site.google_analytics_key != '' %}
