Updated '_layouts/default.html' via CloudCannon

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -77,8 +77,8 @@
 	
 
   <script type="text/javascript" src="{{site.base_url}}/assets/js/enquire.min.js"></script>
-  <script type="text/javascript" src="{{site.base_url}}/assets/js/list.min.js"></script>
-  <script type="text/javascript" src="{{site.base_url}}/assets/js/html2pdf.bundle.min.js"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/list.js/1.5.0/list.min.js"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.2/html2pdf.bundle.min.js"></script>
 	<script type="text/javascript" src="{{site.base_url}}/assets/js/main.js"></script>
 	
 
