Updated 'assets/css/theme/theme.css' via CloudCannon

--- a/assets/css/theme/theme.css
+++ b/assets/css/theme/theme.css
@@ -206,6 +206,10 @@ ul.guide-summary .detail {
 .listjs-search {
   margin-bottom:25px;
   position:relative;
+  max-width:300px;
+}
+.listjs-search input {
+  width:100%;
 }
 .listjs-search .fa-search {
   position:absolute;
